overflow bug fixed

--- a/mediumscreen.css
+++ b/mediumscreen.css
@@ -313,6 +313,7 @@ body {
     width: 90%;
     display: inline-block;
     margin-bottom: 100px;
+    overflow: hidden;
 }
 
 .rectangleInfo {
