--- a/style.css
+++ b/style.css
@@ -107,12 +107,12 @@ body {
 
 .aboutMeContent {
     background-color: white;
-    width: 90%;
+    width: 80%;
     height: 230px;
 
     display: grid;
     grid-template-columns: 1fr 1fr 2fr;
-    padding: 30px;
+    padding: 30px 50px;
     align-items: center;
 }
 
@@ -217,7 +217,7 @@ body {
 
 .pic1:hover .pic1Text {
     visibility: visible;
-  opacity: 1;
+    opacity: 1;
     /* transition: 0.5s; */
 }
 
@@ -274,7 +274,7 @@ body {
     grid-column-end: 9;
     grid-row-start: 2;
     grid-row-end: 3;
-    
+
 }
 
 .pic5:hover:hover img {
@@ -284,7 +284,7 @@ body {
 
 .pic5:hover .pic5Text {
     visibility: visible;
-  opacity: 1;
+    opacity: 1;
     /* transition: 0.5s; */
 }
 
@@ -317,6 +317,7 @@ body {
     width: 90%;
     display: inline-block;
     margin-bottom: 100px;
+    overflow: hidden;
 }
 
 .rectangleInfo {
